force-app/main/default/objects/Alternate_UOM__c/Alternate_UOM__c.object-meta.xml
<CustomObject>
    <label>Alternate UOM</label>
    <nameField>
        <label>Alternate UOM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternate UOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>