force-app/main/default/objects/Alternate_UOM__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Alternate UOMs</relationshipLabel>
    <relationshipName>Alternate_UOMs</relationshipName>
    <type>Lookup</type>
</CustomField>