force-app/main/default/objects/Alternate_UOM__c/fields/UOM_Conversion_D__c.field-meta.xml
<CustomField>
    <fullName>UOM_Conversion_D__c</fullName>
    <label>UOM Conversion D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>