force-app/main/default/objects/Alternate_UOM__c/fields/UOM_Conversion_N__c.field-meta.xml
<CustomField>
    <fullName>UOM_Conversion_N__c</fullName>
    <label>UOM Conversion N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>